grammar.js
        source_file: $ => repeat($.statement),

        // comments

        line_comment: _$ => token(choice(
            /%[^*].*/,
            '%'
        )),
        // TODO: clingo counts nested %* *% blocks
        block_comment: _$ => token(
            seq(
                '%*',
                /[^*]*\*+([^%*][^*]*\*+)*/,
                '%'
            ),
        ),

        // terms

        // the stunt here is meant to exclude not
        identifier: _$ => token(choice(
            /[_']+[a-z][A-Za-z0-9_']*/,
            /[a-mo-z][A-Za-z0-9_']*/,
            /n[A-Za-np-z0-9_'][A-Za-z0-9_']*/,
            /no[A-Za-su-z0-9_'][A-Za-z0-9_']*/,
            /not[A-Za-z0-9_']+/,
            /n/,
            /no/,
        )),

        // Tree sitter (imo incorrectly) applies precedences out of scope. We
        // simply workaround this issue by making classical negation part of
        // the identifier token. In practice, this should work well.
        string: $ => choice(
            seq(
                '"',
                repeat(choice(
                    alias($.unescaped_double_string_fragment, $.string_fragment),
                    $.escape_sequence
                )),
                '"'
            )
        ),

        // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
        // We give names to the token() constructs containing a regexp
        // so as to obtain a node in the CST.
        supremum: _$ => choice(
            '#sup',
            '#supremum'
        ),
        infimum: _$ => choice(
            '#inf',
            '#infimum'
        ),
        number: _$ => choice(
            choice('0', /([1-9][0-9]*)/),
            token(seq('0x', /([0-9A-Fa-f]+)/)),
            token(seq('0o', /([1-7]+)/)),
            token(seq('0b', /([0-1]+)/)),
        ),
        anonymous: _$ => '_',
        variable: _$ => /[_']*[A-Z][A-Za-z0-9_']*/,

        _const_term: $ => alias($.const_term, $.term),

        _classical_identifier: $ => choice(
            $.negative_identifier,
            $.identifier,
        ),

        binary: $ => choice(
            binary_expression(8, $.term, "..", $.term),
            binary_expression(7, $.term, "^", $.term),
            binary_expression(6, $.term, "?", $.term),
            binary_expression(5, $.term, "&", $.term),
            binary_expression(4, $.term, "+", $.term),
            binary_expression(4, $.term, "-", $.term),
            binary_expression(3, $.term, "*", $.term),
            binary_expression(3, $.term, "/", $.term),
            binary_expression(3, $.term, "\\", $.term),
            binary_expression(-2, $.term, "**", $.term),
        ),

        unary: $ => choice(
            unary_expression(1, "-", $.term),
            unary_expression(1, "~", $.term),
        ),

        abs: $ => seq(
            "|",
            $.term,
            repeat(seq(";", $.term)),
            "|"
        ),

        terms: $ => $._terms,
        _terms: $ => seq(
            $.term,
            repeat(seq(",", $.term))
        ),

        // Note: "non-empty" and aliasable to terms
        pool: $ => seq(
            alias($.terms_par, $.terms),
            repeat(alias($.terms_sem, $.terms)),
            ")"
        ),
        pool_binary: $ => seq(
            $.term, ",", $.term,
            repeat(seq(";", $.term, ",", $.term))),


        function: $ => seq(
            field("name", $._classical_identifier),
            field('arguments', optional($.pool)),
        ),
        external_function: $ => seq(
            "@",
            field("name", $.identifier),
            field('arguments', optional($.pool)),
        ),

        tuple: $ => seq(
            alias($.terms_trail_par, $.terms),
            repeat(alias($.terms_trail_sem, $.terms)),
            ")"
        ),

        term: $ => choice(
            $.infimum,
            $.supremum,
            $.number,
            $.string,
            $.anonymous,
            $.variable,
            $.binary,
            $.unary,
            $.abs,
            $.function,
            $.external_function,
            $.tuple,
        ),

        // theory terms

        symbolic_atom: $ => seq(
            field("name", $._classical_identifier),
            field("pool", optional($.pool)),
        ),

        relation: _$ => choice(">", "<", ">=", "<=", "=", "!="),

        comparison: $ => seq($.term, $.relation, $.term, repeat(seq($.relation, $.term))),

        _simple_atom: $ => choice(
            $.symbolic_atom,
            $.comparison,
            $.boolean_constant,
        ),

        default_negation: _$ => "not",

        sign: $ => seq($.default_negation, optional($.default_negation)),

        literal: $ => seq(optional($.sign), $._simple_atom),

        // aggregates

        literal_tuple: $ => seq($.literal, repeat(seq(",", $.literal))),

        _condition: $ => seq(":", optional($.literal_tuple)),

        aggregate_function: _$ => choice(
            "#sum",
            "#sum+",
            "#min",
            "#max",
            "#count"
        ),

        upper: $ => seq(optional($.relation), $.term),
        lower: $ => seq($.term, optional($.relation)),

        set_aggregate_element: $ => seq(
            field("literal", $.literal),
            field("condition", optional($._condition))),
        set_aggregate_elements: $ => seq($.set_aggregate_element, repeat(seq(";", $.set_aggregate_element))),

        _set_aggregate: $ => seq("{", optional($.set_aggregate_elements), "}"),
        set_aggregate: $ => seq(optional($.lower), $._set_aggregate, optional($.upper)),

        // theory atoms

        body_aggregate_element: $ => choice(
            field("condition", $._condition),
            seq(field("tuple", $.terms), field("condition", optional($._condition))),
        ),
        body_aggregate_elements: $ => seq($.body_aggregate_element, repeat(seq(";", $.body_aggregate_element))),

        _body_aggregate: $ => seq($.aggregate_function, "{", optional($.body_aggregate_elements), "}"),
        body_aggregate: $ => seq(optional($.lower), $._body_aggregate, optional($.upper)),

        body_literal: $ => seq(optional($.sign), choice(
            $.set_aggregate,
            $.body_aggregate,
            $.theory_atom,
            $._simple_atom
        )),

        _body_literal_sep: $ => choice(
            seq($.body_literal, choice(";", ",")),
            seq(alias($.body_literal_conditional, $.body_literal), ";"),
        ),

        _body_literal: $ => choice($.body_literal, alias($.body_literal_conditional, $.body_literal)),

        body: $ => seq(optional(seq(repeat($._body_literal_sep), $._body_literal)), "."),
        _colon_body: $ => choice(
            alias($.body_0, $.body),
            seq(":", $.body),
        ),

        // head literals

        conditional_literal: $ => seq($.literal, $._condition),
        head: $ => choice(
            $.literal,
            $.disjunction,
            $.set_aggregate,
            $.head_aggregate,
            $.theory_atom,
        ),

        // statements

        rule: $ => seq($.head, choice(".", seq(":-", $.body))),
        integrity_constraint: $ => seq(":-", $.body),

        priority: $ => seq("@", $.term),
        _optimize_tuple: $ => seq(",", $.terms),
        _optimize_weight: $ => seq($.term, optional($.priority)),

        optimize_element: $ => seq(
            field("weight", $._optimize_weight),
            field("tuple", optional($._optimize_tuple)),
            field("condition", optional($._condition))
        ),
        optimize_elements: $ => seq($.optimize_element, repeat(seq(";", $.optimize_element))),

        weak_constraint: $ => seq(":~", $.body, "[", $._optimize_weight, optional($._optimize_tuple), "]"),
        maximize: $ => seq(choice("#maximize", "#maximise"), "{", optional($.optimize_elements), "}", "."),
        minimize: $ => seq(choice("#minimize", "#minimise"), "{", optional($.optimize_elements), "}", "."),

        identifiers: $ => seq($.identifier, repeat(seq(",", $.identifier))),

        program: $ => seq("#program", $.identifier, optional(seq("(", optional($.identifiers), ")")), "."),

        code: _$ => token(repeat(choice(/[^#]/, /#[^e][^#]/, /#e[^n][^#]/, /#en[^d][^#]/,))),

        script: $ => seq("#script", "(", $.identifier, ")", $.code, "#end", "."),

        const_type: _$ => choice('default', 'override'),

        const: $ => seq("#const", $.identifier, "=", $._const_term, ".", optional(seq("[", $.const_type, "]"))),

        edge: $ => seq("#edge", "(", $.pool_binary, ")", $._colon_body),

        heuristic: $ => seq(
            "#heuristic",
            field("atom", $.symbolic_atom),
            field("body", $._colon_body),
            "[",
            field("weight", $.term),
            field("priority", optional($.priority)),
            ",",
            field("type", $.term),
            "]"
        ),

        include: $ => seq("#include", choice($.string, seq("<", $.identifier, ">")), "."),

        statement: $ => choice(
            $.rule,
            $.integrity_constraint,
            $.weak_constraint,
            $.minimize,
            $.maximize,
            $.show,
            $.show_term,
            $.show_signature,
            $.defined,
            $.edge,
            $.heuristic,
            $.project_signature,
            $.project_atom,
            $.const,
            $.script,
            $.include,
            $.program,
            $.external,
            $.theory
        ),
    }
});
